--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "match-maker",
   "main": "server.js",
   "scripts": {
+    "prod": "NODE_ENV=production npm start",
+    "build": "cd ./client && npm run build",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
