--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.9.3",
+    "lodash": "^4.17.21",
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-big-calendar": "^0.24.6",
